kubernetes: Fix formatting of image layer text
Previously it was too big.

--- a/pkg/kubernetes/styles/layers.less
+++ b/pkg/kubernetes/styles/layers.less
@@ -63,5 +63,7 @@ ul.image-layers {
         overflow: hidden;
         text-overflow: ellipsis;
         padding-right: 15px;
+        white-space: nowrap;
+        font-size: 12px;
     }
 }
